added the machine learning model along with testing data and an interface. Updated the readme with instructions.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,6 @@
 version: "3.2"
 services:
         djangoapp:
-                build: .
-                command: "/bin/bash"
-                volumes:
-                        - ./app/:/app/
-                restart: unless-stopped
-
+                build:
+                        context: ${PWD}
+                command: python3 main_cli.py
